[fix]ユーザープロフィール情報とパーミッション許可情報の取得処理を修正

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,10 +20,12 @@ liff.getOS():<span id="text5"></span><br />
 liff.getLineVersion():<span id="text6"></span><br />
 <br />
 プロフィール：<br />
-liff.getProfile():<span id="text7"></span><br />
+ユーザー名:<span id="text7"></span><br />
+画像URL:<span id="text8"></span><br />
+ステータスメッセージ:<span id="text9"></span><br />
 <br />
 認証関係：<br />
-liff.permission.query("profile"):<span id="text8"></span><br />
-liff.permission.query("openid"):<span id="text9"></span><br />
+liff.permission.query("profile"):<span id="text10"></span><br />
+liff.permission.query("openid"):<span id="text11"></span><br />
 </body>
 </html>
