--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,31 +1,50 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="ja" 
+		xmlns:th="http://www.thymeleaf.org">
 <head>
-<meta charset="UTF-8">
-<title>SV LIFF test</title>
-<script charset="utf-8" src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
-<script src="/index.js" th:src="@{/index.js}" type="module"></script>
+
+	<meta charset="utf-8">
+	
+	<!-- JQuery読み込み -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script> 
+
+	<!-- LIFF SDK読み込み -->
+	<script charset="utf-8" src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
+	<!-- LIFF初期化 -->
+	<script th:src="@{/js/liffinit.js}" type="module"></script>
+
+	<!-- ページごとのスクリプト処理 -->
+	<script th:src="@{/js/index.js}" type="module"></script>
+
+	<title>SV LIFF test</title>
+
 </head>
+
 <body>
-これはLIFFのテストです。
-<div id="access"></div>
-<br />
-LIFFから取得できる情報：<br />
-動作環境：<br />
-liff.getLanguage():<span id="text1"></span><br />
-liff.getVersion():<span id="text2"></span><br />
-liff.isInClient():<span id="text3"></span><br />
-liff.isLoggedIn():<span id="text4"></span><br />
-liff.getOS():<span id="text5"></span><br />
-liff.getLineVersion():<span id="text6"></span><br />
-<br />
-プロフィール：<br />
-ユーザー名:<span id="text7"></span><br />
-画像URL:<span id="text8"></span><br />
-ステータスメッセージ:<span id="text9"></span><br />
-<br />
-認証関係：<br />
-liff.permission.query("profile"):<span id="text10"></span><br />
-liff.permission.query("openid"):<span id="text11"></span><br />
+
+	これはLIFFのテストです。
+	<div id="access"></div>
+	<br />
+	LIFFから取得できる情報：<br />
+	動作環境：<br />
+	liff.getLanguage():<span id="text1"></span><br />
+	liff.getVersion():<span id="text2"></span><br />
+	liff.isInClient():<span id="text3"></span><br />
+	liff.isLoggedIn():<span id="text4"></span><br />
+	liff.getOS():<span id="text5"></span><br />
+	liff.getLineVersion():<span id="text6"></span><br />
+	<br />
+	プロフィール：<br />
+	ユーザー名:<span id="text7"></span><br />
+	画像URL:<span id="text8"></span><br />
+	ステータスメッセージ:<span id="text9"></span><br />
+	<br />
+	認証関係：<br />
+	liff.permission.query("profile"):<span id="text10"></span><br />
+	liff.permission.query("openid"):<span id="text11"></span><br />
+	
+	<br />
+	<a href="./genqrcode">QRコード生成</a>
+
 </body>
 </html>
