[modify]indexページにprofileのJSON文字列を表示するよう追加

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -35,6 +35,7 @@
 	liff.getLineVersion():<span id="text6"></span><br />
 	<br />
 	プロフィール：<br />
+	JSON:<span id="text13"></span><br />
 	ユーザーID:<span id="text12"></span><br />
 	ユーザー名:<span id="text7"></span><br />
 	画像URL:<span id="text8"></span><br />
